Add back to menu button on task pages

--- a/style.css
+++ b/style.css
@@ -173,3 +173,25 @@ nav a:hover::before {
   text-align: center;
   width: 100%;
 }
+
+.menu-link,
+.menu-link:visited {
+  all: unset;
+  text-transform: uppercase;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  border-radius: 50%;
+  font-size: 13px;
+  color: #fff;
+  background-color: #495360;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
+}
